# catkin-ng

./: README.md
.github/workflows/: main.yml
catkin/: CMakeLists.txt  bootstrap.sh  config.cmake.in  package.xml  setup.cfg  setup.py  test_workspace.sh
catkin/cmake/: all.cmake  destinations.cmake  export.cmake  list_exported_targets.py  package-config.cmake.em  package-config.context.in  package.cmake  project.cmake  python-install.cmake.in  python.cmake  script.context.in  status.cmake
catkin/src/catkin/: __init__.py  __main__.py  workspace.py
catkin/src/catkin/commands/: make.py  order.py  package.py
catkin/test-packages/bar/: CMakeLists.txt  package.xml
catkin/test-packages/bar-tool/: CMakeLists.txt  package.xml
catkin/test-packages/foo/: CMakeLists.txt  package.xml
catkin/test-packages/foo-tool/: CMakeLists.txt  package.xml
catkin/test-packages/scripting/: CMakeLists.txt  package.xml
catkin/test-packages/scripting/cmake/: configured.cmake.in  preprocessed.cmake.em  split.cmake.develspace.em
hazel/: .gitignore  CMakeLists.txt  bootstrap.sh  config.cmake.in  package.xml  setup.cfg  setup.py  test_workspace.sh
hazel/cmake/: all.cmake  destinations.cmake  export.cmake  import.cmake  import_ament.cmake.in  import_catkin.cmake.in  import_catkin_cmake.in  import_pkgconfig.cmake.in  list_exported_targets.py  package-config-version.cmake.em  package-config.cmake.em  package-config.context.in  package.cmake  paths.cmake  project.cmake  properties.cmake  python.cmake  script.context.in  status.cmake
hazel/docs/: .rstcheck.cfg  CMakeLists.txt  cli.rst  conf.py  index.rst  reference.rst  tutorial.rst
hazel/docs/command/: hazel_export.rst  hazel_import.rst  hazel_package.rst  hazel_python_setup.rst
hazel/docs/tutorial/: hello_world.rst  introduction.rst
hazel/src/hazel/: __init__.py  __main__.py  catkin_tools_integration.py  setup.py  toposort.py  workspace.py
hazel/src/hazel/commands/: __init__.py  make.py  order.py  package.py
hazel/test-packages/bar/: package.xml
hazel/test-packages/bar-tool/: package.xml
hazel/test-packages/bar-tool/src/: bar-tool.cpp
hazel/test-packages/bar/include/bar/: libbar.h
hazel/test-packages/bar/src/: libbar.cpp
hazel/test-packages/foo/: package.xml
hazel/test-packages/foo-tool/src/: foo-tool.cpp
hazel/test-packages/foo/src/: libfoo.cpp
hazel/test-packages/scripting/: package.xml
hazel/test-packages/scripting/cmake/: configured.cmake.in
test-packages/: .gitignore  README.md  build-test-packages.sh
test-packages/bar/: CMakeLists.txt  package.xml
test-packages/bar-tool/: CMakeLists.txt  package.xml
test-packages/baz/: CMakeLists.txt  package.xml
test-packages/baz/include/baz/: libbaz.h
test-packages/baz/src/: libbaz.cpp
test-packages/catkin_example/: CMakeLists.txt  package.xml
test-packages/catkin_example/include/catkin_example/: example.h
test-packages/catkin_example/src/: example.cpp
test-packages/foo/: CMakeLists.txt  package.xml
test-packages/foo-tool/: CMakeLists.txt  package.xml
test-packages/foo/include/foo/: libfoo.h
test-packages/merge_depends/: CMakeLists.txt  package.xml
test-packages/multiexport/: CMakeLists.txt  package.xml
test-packages/pkgconfig-test/: CMakeLists.txt  package.xml
test-packages/pkgconfig_test/: CMakeLists.txt  package.xml
test-packages/scripting/: CMakeLists.txt  package.xml
test-packages/scripting/cmake/: regular.cmake  split.cmake.installspace.em
