##############################################################################
#
# hazel
# Copyright 2020 Timo Röhling <timo@gaussglocke.de>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
##############################################################################
[metadata]
name = hazel
version = attr: hazel.__version__
description = Next-generation hazel build system
author = Timo Röhling
author_email = timo.roehling@fkie.fraunhofer.de
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache-2.0

[options]
package_dir = 
    =src
packages = find:
setup_requires =
    setuptools
install_requires =
    catkin_pkg

[options.packages.find]
exclude =
  test
  test.*

[options.entry_points]
console_scripts =
    hazel_make = hazel.commands.make:main
    hazel_topological_order = hazel.commands.order:main
