<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>pkgconfig-test</name>
    <version>1.0.0</version>
    <description>test package for hazel</description>
    <license>Apache-2.0</license>
    <author>Timo Röhling</author>
    <maintainer email="timo@gaussglocke.de">Timo Röhling</maintainer>
    <buildtool_depend>hazel</buildtool_depend>
</package>
